Bug 157083 - Artifacts in logos (gen)
Summary: Artifacts in logos (gen)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-09-04 11:03 UTC by Xisco Faulí
Modified: 2023-10-26 13:49 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison (240.89 KB, image/png)
2023-09-04 11:03 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-09-04 11:03:09 UTC
Created attachment 189335 [details]
comparison

Steps to reproduce:
1. Clean user profile
2. Launch LibreOffice with SAL_USE_VCLPLUGIN=gen instdir/program/soffice

-> Logo in the middle and LibreOffice on the bottom left corner have some artifacts. See comparison

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 871cb4048ec50ea9970269c34c1dd71ce6d27a13
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-09-04 11:04:07 UTC
Regression introduced by:

author	Noel Grandin <noelgrandin@gmail.com>	2021-04-16 20:33:10 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2023-07-25 08:38:12 +0200
commit 81994cb2b8b32453a92bcb011830fcb884f22ff3 (patch)
tree ae1750e92421ad2e0ec3f50351c3be6581841598
parent dabedcaf27b0af1e38a611b8d8e48444f848e01d (diff)
Convert internal vcl bitmap formats transparency->alpha (II)

Bisected with: bibisect-linux64-24.2

Adding Cc: to Noel Grandin
Comment 2 Xisco Faulí 2023-09-04 11:38:10 UTC
I just realized there is another problem in master. There is a part of the logo which is not rendered correctly and it's white. This is another issue. I'll create a follow-up ticket
Comment 3 Patrick (volunteer) 2023-09-11 14:49:22 UTC
I cannot reproduce this on macOS with Skia/Metal, Skia/Raster, or Skia disabled so maybe this is a "Linux Skia disabled only" bug.
Comment 4 Noel Grandin 2023-10-02 10:25:58 UTC
This seems to be fixed now, probably with one of Patrick's patches
Comment 5 Xisco Faulí 2023-10-16 12:05:24 UTC
(In reply to Noel Grandin from comment #4)
> This seems to be fixed now, probably with one of Patrick's patches

The issue is still reproducible in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3649dc202bedf72e37c77993a1f7027bfdfc6d9e
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

See the black border around the logo
Comment 6 Patrick (volunteer) 2023-10-25 00:43:30 UTC
(In reply to Xisco Faulí from comment #5)
> (In reply to Noel Grandin from comment #4)
> > This seems to be fixed now, probably with one of Patrick's patches
> 
> The issue is still reproducible in
> 
> Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
> Build ID: 3649dc202bedf72e37c77993a1f7027bfdfc6d9e
> CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: x11
> Locale: es-ES (es_ES.UTF-8); UI: en-US
> Calc: threaded
> 
> See the black border around the logo

I am not seeing this bug on macOS in my local master build. I tested with Skia/Metal, Skia/Raster, and Skia disabled and all render the LibreOffice logo correctly in the Start Center:

Version: 24.2.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: 3d58f3c0c22a972097956f781c51c2822e6d524f
CPU threads: 8; OS: macOS 14.0; UI render: default; VCL: osx
Locale: en-CA (en_CA.UTF-8); UI: en-US
Calc: threaded
Comment 7 Xisco Faulí 2023-10-25 08:15:06 UTC
(In reply to Patrick Luby from comment #6)
> I am not seeing this bug on macOS in my local master build. I tested with
> Skia/Metal, Skia/Raster, and Skia disabled and all render the LibreOffice
> logo correctly in the Start Center:

Still reproducible with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9704f61982360ce35983a61cca3fd00bbdf51ab6
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

Can you use SAL_USE_VCLPLUGIN=gen on mac ?
Comment 8 Patrick (volunteer) 2023-10-25 12:40:23 UTC
(In reply to Xisco Faulí from comment #7)
> Can you use SAL_USE_VCLPLUGIN=gen on mac ?

The "gen" plugin does not get built on macOS so I get the following message after setting SAL_USE_VCLPLUGIN=gen and running from the Terminal:

warn:vcl.plugadapt:29239:36030516:vcl/source/app/salplug.cxx:158: could not load shared object libvclplug_genlo.dylib

The closest to "gen" on macOS is to disable Skia which will do all drawing using native macOS Quartz 2D drawing functions. Since the bug does not occur with those functions, I think we can assume that the remaining bug is limited to only the non-Skia, X11 drawing code.

Can anyone test if this bug still occurs on Windows with Skia disabled? Windows has its own non-Skia, native drawing code like macOS.
Comment 9 Noel Grandin 2023-10-25 13:12:50 UTC
(In reply to Patrick Luby from comment #8)
> Can anyone test if this bug still occurs on Windows with Skia disabled?
> Windows has its own non-Skia, native drawing code like macOS.


It does not.
Comment 10 Commit Notification 2023-10-26 13:46:57 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6eb4cce433e5c4e905910d6dfdf6fc15065a9d3e

tdf#157083 Artifacts in logos (gen)

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.