tdf#157083 Artifacts in logos (gen)

regression from commit
    commit 81994cb2b8b32453a92bcb011830fcb884f22ff3
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Fri Apr 16 20:33:10 2021 +0200
    Convert internal vcl bitmap formats transparency->alpha (II)

Change-Id: I1c269bcfa9b565258bc99c2810e960ae965f9b54
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158491
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@neooffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>